Revise default presentation page to show device information.

--- a/resource/default.html
+++ b/resource/default.html
@@ -9,7 +9,15 @@
 
   <body>
   	<h1>Default UPnP presentation page</h1>
+  	<h2>{friendlyName}</h2>
   	<p>
-  	You should provide a custom page for your application
+  	You should provide a custom page for your application.
+  	<p>
+  	Device Type: {deviceType}
+  	<br>
+  	Serial number: {serialNumber}
+  	<p>
+	<a href="{descriptionURL}">	Description</a>
+
   </body>
 </html>
